# adv_2023

./: README.md  check_python_file.sh  gitpod.dockerfile  pyproject.toml  sonar-project.properties
.github/workflows/: black_format.yml  check_shell_scripts.yml  python_test.yml  third_party_checks.yml
solutions/: adv_2023_00.py  adv_2023_01.py  adv_2023_02.py  adv_2023_03.py  adv_2023_04.py  adv_2023_05.py  adv_2023_06.py  adv_2023_07.py  adv_2023_08.py  adv_2023_09.py  adv_2023_10.py  adv_2023_11.py  adv_2023_12.py  adv_2023_13.py  adv_2023_14.py  adv_2023_15.py  adv_2023_16.py  adv_2023_17.py  adv_2023_18.py  adv_2023_19.py  adv_2023_20.py  adv_2023_21.py  adv_2023_22.py  adv_2023_23.py  adv_2023_24.py  adv_2023_25.py
tests/: general_utils.py  test_adv_2023_00.py  test_adv_2023_01.py  test_adv_2023_02.py  test_adv_2023_03.py  test_adv_2023_04.py  test_adv_2023_05.py  test_adv_2023_06.py  test_adv_2023_07.py  test_adv_2023_08.py  test_adv_2023_09.py  test_adv_2023_10.py  test_adv_2023_11.py  test_adv_2023_12.py  test_adv_2023_13.py  test_adv_2023_14.py  test_adv_2023_15.py  test_adv_2023_16.py  test_adv_2023_17.py  test_adv_2023_18.py  test_adv_2023_19.py  test_adv_2023_20.py  test_adv_2023_21.py  test_adv_2023_22.py  test_adv_2023_23.py  test_adv_2023_24.py  test_adv_2023_25.py  test_utils.py
tests/test_input_data/: data_adv_2023_10_small_wrong.txt  data_adv_2023_18_p.txt
